--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "embla-carousel-react": "^8.6.0",
     "next": "16.0.6",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
