--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@radix-ui/react-accordion": "^1.2.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html-react-parser": "^5.2.11",
+    "i": "^0.3.7",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
+    "npm": "^11.7.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "swiper": "^12.0.3",
