--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-navigation-menu": "^1.2.14",
-    "@studio-freight/lenis": "^1.0.42",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
@@ -22,6 +21,7 @@
     "gsap": "^3.14.2",
     "html-react-parser": "^5.2.11",
     "i": "^0.3.7",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "npm": "^11.7.0",
