--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "npm": "^11.7.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "split-type": "^0.3.4",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
