--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "html-react-parser": "^5.2.11",
     "i": "^0.3.7",
     "lenis": "^1.3.17",
+    "lottie-web": "^5.13.0",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "npm": "^11.7.0",
